# rusty-pi

./: Cargo.toml  README.md  armv6zk-none-eabihf.json  build.sh  clean.sh  memory.ld
.cargo/: config.toml
libpi/: Cargo.toml
libpi/src/: bits.rs  debug.rs  gpio.rs  interrupts.rs  io.rs  lib.rs  threads.rs  time.rs  tstack.rs  uart.rs  user.rs
libunix/: Cargo.toml
libunix/src/: bits.rs
src/: main.rs  start.rs
