workspace = { members = ["libpi", "libunix"] }
[package]
name = "rusty-pi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cc = "1.0"

[dependencies]
libpi = { path = "libpi" }

[[bin]] 
name = "kernel"   
path = "src/main.rs"